--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "minimum-stability": "stable",
     "autoload" : {
         "psr-4": {
-            "Notificator\\" : "src/"
+            "Lloople\\Notificator\\" : "src/"
         }
     }
 }
