--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,11 @@
     "description": "Attach objects to notification's session flashed variable",
     "type": "library",
     "require": {
-        "laravel/framework": "5.5.*",
-        "php": ">=7.0"
+        "laravel/framework": "5.5.* || 5.6.*",
+        "php": ">=7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0",
+        "phpunit/phpunit": "~7.0",
         "orchestra/testbench": "~3.0"
     },
     "license": "MIT",
